--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "main": "app.js",
     "dependencies": {
         "connect": "~2.9.1",
-        "wechat": "~0.5.0"
+        "wechat": "~0.5.0",
+        "get": "~1.3.0"
     },
     "engines": {
         "node": ">=0.6.0",
